--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.24.0",
     "express": "^4.17.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-rating": "^2.0.5"
   }
 }
